Changes need to build integration tests in JDK 17